--- a/roboticadje.html
+++ b/roboticadje.html
@@ -53,7 +53,8 @@
 
         <h1>Projeto DJE</h1>
 
-            <p>No desafio final do DJE 2022(Desafio Jovem Engenheiro), foi apresentado aos finalistas um projeto de robótica. Estes finalistas deveriam desenvolver algo que fosse sustentável, educativo e adaptável com o kit proposto.</p>
+        <p> Desafio Jovem Engenheiro 2022. Realizada pela Universidade Estadual de Campinas (Unicamp), a competição online visa incentivar alunos do Ensino Médio a ingressar em cursos nas áreas de exatas.</p>
+        <p>No desafio final do DJE 2022(Desafio Jovem Engenheiro), foi apresentado aos finalistas um projeto de robótica. Estes finalistas deveriam desenvolver algo que fosse sustentável, educativo e adaptável com o kit proposto.</p>
              
             <img src="https://fetecdarcy.github.io/img/CPS.jpg" alt="">
 
