--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
             <div class="ne">
 
-                <a href="https://fetecdarcy.github.io/jogopong"><img src="https://cdn.discordapp.com/attachments/994774088474185729/1033547794725752924/Sem_Titulo-3.png" alt="" width="300vw"></a>
+                <a href="https://fetecdarcy.github.io/jogopong"><img src="https://emc.acidadeon.com/dbimagens/pong_atari_1200x675_29112021121533.webp?mrf-size=m"></a>
 
                 <p>Jogo 1 vs 1 feito em <strong>Python</strong> e <strong>JavaScript</strong>.</p>
 
